@@ -1,10 +1,12 @@
-# fnmatch.m4 serial 2 (gettext-0.11.1)
+# fnmatch.m4 serial 3 (gettext-0.11.6)
 dnl Copyright (C) 1996-2002 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
 dnl that contains a configuration script generated by Autoconf, under
 dnl the same distribution terms as the rest of that program.
+
+AC_PREREQ(2.52)
 
 dnl Determine whether the system has a working fnmatch() function.
 AC_DEFUN([gt_FUNC_FNMATCH],
@@ -44,7 +46,6 @@ AC_DEFUN([gt_FUNC_FNMATCH],
     dnl libgettextlib.so.
     AC_DEFINE([fnmatch], [posix_fnmatch],
       [Define to a replacement function name for fnmatch().])
-    LIBOBJS="$LIBOBJS pfnmatch.${ac_objext}"
-    AC_SUBST(LIBOBJS)
+    AC_LIBOBJ(pfnmatch)
   fi
 ])
