@@ -1,10 +1,12 @@
-# getline.m4 serial 5 (gettext-0.11)
+# getline.m4 serial 6 (gettext-0.11.6)
 dnl Copyright (C) 1998-2002 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
 dnl that contains a configuration script generated by Autoconf, under
 dnl the same distribution terms as the rest of that program.
+
+AC_PREREQ(2.52)
 
 dnl See if there's a working, system-supplied version of the getline function.
 dnl We can't just do AC_REPLACE_FUNCS(getline) because some systems
@@ -47,7 +49,6 @@ AC_DEFUN([AM_FUNC_GETLINE],
     dnl libgettextlib.so.
     AC_DEFINE([getline], [gnu_getline],
       [Define to a replacement function name for getline().])
-    LIBOBJS="$LIBOBJS getline.${ac_objext}"
-    AC_SUBST(LIBOBJS)
+    AC_LIBOBJ(getline)
   fi
 ])
