@@ -1,3 +1,8 @@
+2002-11-19  Bruno Haible  <bruno@clisp.org>
+
+	Switch to autoconf-2.56.
+	* configure.in (LTLIBOBJS): Remove variable.
+
 2002-11-14  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am ($(srcdir)/tests/rpathx/aclocal.m4,
